Fixed initial page height
Originally too long where the scroll bar would appear. I decreased the header size to make the page into one window size

--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,6 @@ body {
 /* HEADER STYLES*/
 .header {
     grid-area: header;
-    height: 17vh;
     grid-column: 2 / 4;
     background-color: white;
     display: grid;
@@ -120,7 +119,7 @@ body {
     padding: 1vh 4vw 1vh 2vw;
     box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.226);
     z-index: 2;
-    min-height: 200px;
+    min-height: 155px;
 }
 
 /* toprow */
